--- a/style.css
+++ b/style.css
@@ -3,9 +3,9 @@
     color: white;
 }
 
-body, html {
+/* body, html { 
     height: 100%;
-  }
+  } */
   .bg {
     /* The image used */
     background-image: url("./bg2.jpg");
@@ -44,7 +44,7 @@ body, html {
 
 /* Other Classes for Page Styling */
 
-body {
+#footerdiv {
   background:teal;
 }
 
